# mikrom

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Jenkinsfile  MEMORY.md  Makefile  README.md  blog-post.md  commit_msg.txt  diag_nats.rs  docker-compose.caddy.yml  docker-compose.yml  mikrom-app-roadmap.md  package.json  rustfmt.toml  skills-lock.json
ci/: Cargo.toml
ci/src/: main.rs  pipeline.rs
mikrom-agent/: .env  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs
mikrom-agent-ebpf/: Cargo.toml
mikrom-agent-ebpf/src/: main.rs
mikrom-agent/debian/: agent.env  mikrom-agent.service
mikrom-agent/src/: builder.rs  ceph.rs  config.rs  firecracker.rs  http.rs  lib.rs  logger.rs  main.rs  metrics.rs  network.rs  server.rs  server.rs-end.txt  subjects.rs  types.rs  wireguard.rs
mikrom-agent/systemd/: mikrom-agent.service
mikrom-agent/tests/: ceph_integration_tests.rs  hypervisor_benchmark.rs  hypervisor_integration.rs  nats_agent_tests.rs  resilience_tests.rs
mikrom-api/: .env  .env.example  .env.production  .env.staging  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
mikrom-api/migrations/: 001_create_users_table.sql  002_add_role_to_users.sql  003_add_user_profile_fields.sql  004_create_apps_and_deployments.sql  005_add_routing_to_apps.sql  006_add_ip_to_deployments.sql  007_add_resources_to_deployments.sql  008_add_active_deployment_to_apps.sql  009_add_github_webhook_secret_to_apps.sql  010_make_app_name_unique.sql  011_add_git_metadata_to_deployments.sql  012_populate_app_secrets.sql  012_scheduler_persistence.sql  013_acme_accounts.sql  013_add_deployment_id_to_jobs.sql  014_add_cert_expiry_to_apps.sql  015_add_github_accounts.sql  016_add_github_repo_to_apps.sql  017_add_health_and_drain_config_to_apps.sql  018_add_6pn_metadata.sql  019_create_security_rules.sql  020_remove_ipv4_metadata.sql  021_create_volumes.sql  022_add_mount_point_to_volumes.sql  023_add_scaling_to_apps.sql  024_add_access_mode_to_volumes.sql  026_update_default_deployment_memory_mib.sql  027_drop_workers_table.sql  028_decouple_volumes_from_apps.sql  029_add_hypervisor_to_deployments.sql  030_alter_deployments_hypervisor_to_integer.sql  031_create_databases_table.sql  032_add_neon_provisioning_fields_to_databases.sql  033_add_neon_database_provisioning_check.sql  034_validate_neon_database_provisioning_check.sql  035_relax_neon_provisioning_constraint.sql  036_add_tenant_gen_to_databases.sql  037_introduce_tenants.sql  038_add_managed_acme_domains.sql  040_add_acme_managed_domain_mode.sql  (+13 more)
mikrom-api/src/: acme.rs  builder.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  nats.rs  openapi.rs  rate_limit.rs  scheduler.rs  sync.rs  test_utils.rs  workspace.rs
mikrom-api/tests/: acme_tests.rs  app_api_tests.rs  app_cleanup_integration_tests.rs  billing_api_tests.rs  billing_webhook_tests.rs  chaos_e2e.rs  concurrency_tests.rs  database_connection_tests.rs  database_repo_tests.rs  db_isolation_tests.rs  deploy_e2e.rs  deployment_metadata_tests.rs  encryption_tests.rs  github_callback_tests.rs  integration_app_lifecycle_tests.rs  integration_auth_tests.rs  integration_tests.rs  lifecycle_tests.rs  logging_tests.rs  manual_deploy_git_metadata_tests.rs  network_metrics_tests.rs  notifications_api_tests.rs  observability_api_tests.rs  openapi_tests.rs  port_propagation_tests.rs  promotion_tests.rs  rate_limit_tests.rs  reconciliation_tests.rs  rollback_tests.rs  routing_v1_tests.rs  sse_deployments_tests.rs  system_health_tests.rs  tenant_integration_tests.rs  unified_api_tests.rs  versioning_tests.rs  volume_api_tests.rs  volume_decoupling_tests.rs  workspace_sse_tests.rs  zero_downtime_deployments_tests.rs
mikrom-builder/: .env  .env.example  Cargo.toml  Dockerfile  README.md
mikrom-builder/src/: builder.rs  config.rs  main.rs  server.rs  state.rs
mikrom-builder/tests/: nats_build_tests.rs
mikrom-cli/: .env.example  Cargo.toml  Dockerfile  README.md
mikrom-cli/src/: client.rs  commands.rs  config.rs  dashboard.rs  handlers.rs  lib.rs  main.rs  output.rs  ui.rs
mikrom-cli/tests/: e2e_tests.rs  integration_tests.rs
mikrom-dns/: Cargo.toml  README.md
mikrom-dns/src/: lib.rs  main.rs
mikrom-dns/tests/: integration.rs
mikrom-init/: Cargo.toml  build.zig  build.zig.zon
mikrom-init/src/: main.rs
mikrom-network/: Cargo.toml  README.md
mikrom-network/debian/: mikrom-network.service  network.env
mikrom-network/src/: lib.rs  main.rs
mikrom-proto/: Cargo.toml  Dockerfile.cert-gen  README.md  build.rs
mikrom-proto/proto/: agent.proto  builder.proto  router.proto  scheduler.proto
mikrom-proto/src/: id.rs  lib.rs  mikrom.agent.v1.rs  mikrom.builder.v1.rs  mikrom.router.v1.rs  mikrom.scheduler.v1.rs  mod.rs  sixpn.rs  subjects.rs  telemetry.rs  tls.rs
mikrom-proto/tests/: database_messages.rs  nats_protobuf_tests.rs  subjects_tests.rs  telemetry_smoke.rs
mikrom-router/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deb  README.md  app.go  crypto.go  db.go  go.mod  go.sum  mikrom.go  mikrom_test.go  nats.go  nats_logger_test.go  package.sh  wg.go
mikrom-router-nginx/: Cargo.toml
mikrom-router-nginx/debian/: mikrom-router-load.conf  mikrom-router-site.conf  postinst
mikrom-router-nginx/src/: crypto.rs  lib.rs
mikrom-router-nginx/tests/: common.rs  publish_test_route.rs
mikrom-router/migrations/: 002_tls_certificates.sql  003_add_cascading_deletes.sql  004_remove_fk_constraints.up.sql  005_multiple_targets.up.sql  006_add_acme_updated_at.up.sql  007_normalize_acme_challenges.up.sql  008_decouple_acme_tls_from_routes.up.sql  009_restore_builtin_host_routes_and_constraints.up.sql
mikrom-router/proto/: scheduler.pb.go
mikrom-router/src/: acme.rs  bootstrap.rs  config.rs  control_plane.rs  health.rs  integration_tests.rs  lib.rs  main.rs  nats.rs  proxy.rs  proxy_tests.rs  resolver.rs  runtime.rs  server.rs  (+11 more)
mikrom-scheduler/: .env  .env.example  Cargo.toml  Dockerfile  README.md
mikrom-telemetry/: .env.example  Cargo.toml  Dockerfile  README.md
(+744 files in other folders)
