[workspace]
members = [
    "mikrom-proto",
    "mikrom-scheduler",
    "mikrom-agent",
    "mikrom-api",
    "mikrom-cli", "mikrom-builder", "mikrom-router",
]
resolver = "2"

[workspace.dependencies]
tonic = { version = "0.12.3", features = ["transport", "tls"] }
prost = "0.13"
tonic-build = "0.12.3"
tokio = { version = "1", features = ["full"] }
envy = "0.4"
anyhow = "1.0"

[workspace.lints.rust]
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
