[workspace]
members = [
    "mikrom-proto",
    "mikrom-scheduler",
    "mikrom-agent",
    "mikrom-api",
    "mikrom-cli", "mikrom-builder", "mikrom-init", "mikrom-telemetry"
, "mikrom-agent-ebpf-common", "mikrom-agent-ebpf"]
resolver = "2"

[workspace.dependencies]
tonic = { version = "0.12.3", features = ["transport", "tls"] }
prost = "0.13"
tonic-build = "0.12.3"
tokio = { version = "1", features = ["full"] }
envy = "0.4"
anyhow = "1.0"
async-nats = "0.38"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
