[package]
name = "mikrom-agent-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = "0.1"
mikrom-agent-ebpf-common = { path = "../mikrom-agent-ebpf-common" }
network-types = "0.0.5"

[[bin]]
name = "mikrom-agent-ebpf"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
