[package]
name = "mikrom-agent"
version = "0.1.1"
edition = "2024"


[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
dashmap = "6.1"
sysinfo = "0.32"
hostname = "0.4"
envy.workspace = true

mikrom-proto = { path = "../mikrom-proto" }
dotenvy = "0.15"
shlex = "1.3"
anyhow.workspace = true
async-nats.workspace = true
futures = "0.3.32"
reqwest = { version = "0.13.3", features = ["json"] }

[package.metadata.deb]
maintainer = "Antonio Pardo <apardo@spluca.org>"
copyright = "2026, Mikrom Team"
license-file = ["../LICENSE", "0"]
extended-description = """\
Mikrom Agent is a daemon that runs on compute nodes to manage Firecracker microVMs.
It communicates with the Mikrom Scheduler to deploy and manage workloads.
"""
depends = "libc6, libssl3, iptables"
section = "admin"
priority = "optional"
assets = [
    ["target/release/mikrom-agent", "/usr/bin/mikrom-agent", "755"],
    ["target/release/mikrom-init", "/usr/bin/mikrom-init", "755"],
    ["debian/mikrom-agent.service", "/lib/systemd/system/mikrom-agent.service", "644"],
    ["debian/agent.env", "/etc/mikrom/agent.env", "644"],
]
systemd-units = { unit-name = "mikrom-agent" }

[features]
default = ["build"]
build = []

[dev-dependencies]
wiremock = "0.6.5"
