[package]
name = "mikrom-agent"
version = "0.4.5"
edition = "2024"
description = "Mikrom compute node agent for Firecracker and Cloud Hypervisor workloads"


[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
dashmap.workspace = true
sysinfo = "0.32"
hostname = "0.4"
envy.workspace = true

mikrom-proto = { version = "0.4.5", path = "../mikrom-proto", features = ["telemetry"] }
mikrom-network = { path = "../mikrom-network" }
dotenvy = "0.15"
anyhow.workspace = true
async-nats.workspace = true
futures = "0.3.32"
reqwest = { workspace = true, features = ["json"] }
aya = "0.14"
aya-log = "0.3"
mikrom-agent-ebpf-common = { path = "../mikrom-agent-ebpf-common", features = ["user"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
hex = "0.4.3"
rand = "0.10"
base64 = "0.22.1"
blake3 = "1.5"
librados-sys = "0.1"
librbd-sys = "0.1"
libc = "0.2"
neli = { version = "0.7.4", features = ["async"] }
bollard = "0.20.2"
async-trait = "0.1"
axum = "0.8"
socket2.workspace = true

[package.metadata.deb]
maintainer = "Antonio Pardo <apardo@spluca.org>"
copyright = "2026, Mikrom Team"
license-file = ["../LICENSE", "0"]
extended-description = """\
Mikrom Agent is a daemon that runs on compute nodes to manage Firecracker and Cloud Hypervisor microVMs.
It communicates with the Mikrom Scheduler to deploy and manage workloads.
"""
depends = "libc6, libssl3, iptables, iproute2"
section = "admin"
priority = "optional"
assets = [
    ["target/release/mikrom-agent", "/usr/bin/mikrom-agent", "755"],
    ["target/release/mikrom-init", "/usr/bin/mikrom-init", "755"],
    ["target/release/tundra-nat64", "/usr/local/bin/tundra-nat64", "755"],
    ["debian/lib/systemd/system/mikrom-agent.service", "/lib/systemd/system/mikrom-agent.service", "644"],
    ["debian/agent.env", "/etc/mikrom/agent.env", "644"],
]

[features]
default = ["build"]
build = []

[dev-dependencies]
wiremock = "0.6.5"
tempfile = "3.27"
