[package]
name = "mikrom-api"
version = "0.1.1"
edition = "2024"
default-run = "mikrom-api"


[features]
default = []
test-utils = []

[dependencies]
# Axum 0.7 is required for compatibility with utoipa-swagger-ui v8
axum = "0.7"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bcrypt = "0.16"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
dotenvy = "0.15"
thiserror = "2"
anyhow.workspace = true
async-nats.workspace = true
async-stream = "0.3"
futures = "0.3.32"
mockall = "0.13"
async-trait = "0.1"
tonic.workspace = true
prost.workspace = true
envy.workspace = true

mikrom-proto = { path = "../mikrom-proto" }
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.1"
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
rand = "0.10.1"

[dev-dependencies]
axum-test = "15"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
hyper = "1"
mikrom-scheduler = { path = "../mikrom-scheduler" }
mikrom-agent = { path = "../mikrom-agent" }

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
test = true
