[package]
name = "mikrom-api"
version = "0.1.1"
edition = "2024"
default-run = "mikrom-api"


[features]
default = []
test-utils = []

[dependencies]
# Axum 0.7 is required for compatibility with utoipa-swagger-ui v8
axum = "0.7"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bcrypt = "0.16"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
dotenvy = "0.15"
thiserror = "2"
anyhow.workspace = true
async-nats.workspace = true
async-stream = "0.3"
futures = "0.3.32"
mockall = "0.13"
async-trait = "0.1"
prost.workspace = true
envy.workspace = true

mikrom-proto = { path = "../mikrom-proto" }
instant-acme = { version = "0.8.5", features = ["rcgen"] }
x509-parser = "0.16"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
rand = "0.10.1"
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.13.3", features = ["json"] }
dashmap = "6.1.0"

[dev-dependencies]
axum-test = "15"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
hyper = "1"
mikrom-scheduler = { path = "../mikrom-scheduler" }
mikrom-agent = { path = "../mikrom-agent" }

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
test = true
required-features = ["test-utils"]

[[test]]
name = "openapi_tests"
path = "tests/openapi_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "system_health_tests"
path = "tests/system_health_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "encryption_tests"
path = "tests/encryption_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "deployment_metadata_tests"
path = "tests/deployment_metadata_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "acme_tests"
path = "tests/acme_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "app_api_tests"
path = "tests/app_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "db_isolation_tests"
path = "tests/db_isolation_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "lifecycle_tests"
path = "tests/lifecycle_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "rollback_tests"
path = "tests/rollback_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "sse_deployments_tests"
path = "tests/sse_deployments_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "unified_api_tests"
path = "tests/unified_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "observability_api_tests"
path = "tests/observability_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "reconciliation_tests"
path = "tests/reconciliation_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "app_cleanup_integration_tests"
path = "tests/app_cleanup_integration_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "github_callback_tests"
path = "tests/github_callback_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "manual_deploy_git_metadata_tests"
path = "tests/manual_deploy_git_metadata_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "zero_downtime_deployments_tests"
path = "tests/zero_downtime_deployments_tests.rs"
required-features = ["test-utils"]
