[package]
name = "mikrom-api"
version = "0.3.1"
edition = "2024"
default-run = "mikrom-api"


[features]
default = []
test-utils = []
api-e2e = ["test-utils"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bcrypt = "0.16"
jsonwebtoken = "10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "macros"] }
dotenvy = "0.15"
thiserror = "2"
anyhow.workspace = true
async-nats.workspace = true
async-stream = "0.3"
futures = "0.3.32"
mockall = "0.15"
async-trait = "0.1"
prost.workspace = true
envy.workspace = true

mikrom-proto = { version = "0.3.0", path = "../mikrom-proto", features = ["sqlx-postgres", "telemetry"] }
instant-acme = { version = "0.8.5", features = ["rcgen"] }
x509-parser = "0.16"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
indexmap = "2"
rovo = { version = "0.4.8", features = ["swagger"] }
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
rand = "0.10.1"
rustls = { version = "0.23", features = ["ring"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
dashmap.workspace = true
socket2.workspace = true

[dev-dependencies]
axum-test = "15"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
hyper = "1"
wiremock = "0.6.5"
mikrom-scheduler = { path = "../mikrom-scheduler" }
mikrom-agent = { path = "../mikrom-agent" }
tempfile = "3.27"
serial_test = "3"

[[test]]
name = "integration_auth_tests"
path = "tests/integration_auth_tests.rs"
test = true
required-features = ["api-e2e"]

[[test]]
name = "integration_app_lifecycle_tests"
path = "tests/integration_app_lifecycle_tests.rs"
required-features = ["api-e2e"]

[[test]]
name = "openapi_tests"
path = "tests/openapi_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "system_health_tests"
path = "tests/system_health_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "encryption_tests"
path = "tests/encryption_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "deployment_metadata_tests"
path = "tests/deployment_metadata_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "acme_tests"
path = "tests/acme_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "app_api_tests"
path = "tests/app_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "db_isolation_tests"
path = "tests/db_isolation_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "lifecycle_tests"
path = "tests/lifecycle_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "rollback_tests"
path = "tests/rollback_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "sse_deployments_tests"
path = "tests/sse_deployments_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "unified_api_tests"
path = "tests/unified_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "observability_api_tests"
path = "tests/observability_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "reconciliation_tests"
path = "tests/reconciliation_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "app_cleanup_integration_tests"
path = "tests/app_cleanup_integration_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "github_callback_tests"
path = "tests/github_callback_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "manual_deploy_git_metadata_tests"
path = "tests/manual_deploy_git_metadata_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "zero_downtime_deployments_tests"
path = "tests/zero_downtime_deployments_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "rate_limit_tests"
path = "tests/rate_limit_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "volume_api_tests"
path = "tests/volume_api_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "port_propagation_tests"
path = "tests/port_propagation_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "database_repo_tests"
path = "tests/database_repo_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "billing_webhook_tests"
path = "tests/billing_webhook_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "notifications_api_tests"
path = "tests/notifications_api_tests.rs"
required-features = ["test-utils"]
