[package]
name = "mikrom-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow.workspace = true
envy.workspace = true
dotenvy = "0.15"
parking_lot = "0.12"

mikrom-proto = { path = "../mikrom-proto" }
git2 = "0.19"
tempfile = "3.10"
