[package]
name = "mikrom-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow.workspace = true
async-nats.workspace = true
futures = "0.3"
envy.workspace = true
dotenvy = "0.15"
dashmap = "6.1"

mikrom-proto = { path = "../mikrom-proto" }
git2 = "0.19"
tempfile = "3.27"
