[package]
name = "mikrom-builder"
version = "0.3.1"
edition = "2024"

[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow.workspace = true
async-nats.workspace = true
futures = "0.3"
envy.workspace = true
dotenvy = "0.15"
dashmap.workspace = true
bytes = "1"
bollard = "0.20.2"
tar = "0.4"
glob = "0.3"
walkdir = "2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

mikrom-proto = { version = "0.3.0", path = "../mikrom-proto", features = ["telemetry"] }
git2 = "0.20.4"
tempfile = "3.27"
