[package]
name = "mikrom-cli"
version = "0.1.1"
edition = "2024"


[[bin]]
name = "mikrom"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
anyhow = "1"
toml = "0.8"
dirs = "5"
yansi = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
