[package]
name = "mikrom-cli"
version = "0.4.5"
edition = "2024"


[[bin]]
name = "mikrom"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
anyhow = "1"
toml = "1.1"
dirs = "6"
yansi = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.15"
envy = "0.4"
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
