[package]
name = "mikrom-init"
version = "0.1.0"
edition = "2024"
description = "Static init process (PID 1) for Mikrom microVMs"

[dependencies]
nix = { version = "0.29", features = ["mount", "hostname", "user", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
