[package]
name = "mikrom-init"
version = "0.3.0"
edition = "2024"
description = "Static init process (PID 1) for Mikrom microVMs"

[dependencies]
nix = { version = "0.29", features = ["mount", "hostname", "user", "process", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rtnetlink = "0.14"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "process", "time"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.27"
