[package]
name = "mikrom-proto"
version = "0.1.1"
edition = "2024"
description = "Shared proto definitions for mikrom services"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
rcgen = { version = "0.13", features = ["crypto"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "experimental_async_runtime"] }
opentelemetry-otlp = { version = "0.31.1", features = ["tonic", "grpc-tonic", "prost"] }
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "cert-gen"
path = "src/bin/cert_gen.rs"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
futures = "0.3"

[features]
default = ["build"]
build = []
