[package]
name = "mikrom-proto"
version = "0.3.0"
edition = "2024"
description = "Shared proto definitions for mikrom services"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
rcgen = { version = "0.14", features = ["crypto"] }
opentelemetry = { version = "0.32.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "http-json", "logs", "metrics", "trace", "reqwest-client", "reqwest-rustls"] }
opentelemetry-http = { version = "0.32.0" }
opentelemetry-appender-tracing = { version = "0.32.0" }
tracing-opentelemetry = "0.33.0"
opentelemetry-semantic-conventions = "0.32.1"
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
async-nats = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", optional = true, features = ["postgres", "uuid", "runtime-tokio-rustls", "macros"] }

[[bin]]
name = "cert-gen"
path = "src/bin/cert_gen.rs"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
futures = "0.3"
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic"] }
tonic14 = { package = "tonic", version = "0.14.6", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net"] }
axum = "0.8"
prost14 = { package = "prost", version = "0.14" }

[features]
default = ["build"]
build = []
sqlx-postgres = ["dep:sqlx"]
telemetry = []
