[package]
name = "mikrom-router-nginx"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.deb]
name = "mikrom-router-nginx"
maintainer = "Mikrom Team <team@mikrom.local>"
copyright = "2026, Mikrom"
license-file = ["../LICENSE", "0"]
depends = "nginx (>= 1.26.0), libc6 (>= 2.31), libssl3, libcrypt1"
section = "httpd"
priority = "optional"
assets = [
    ["target/release/libmikrom_router_nginx.so", "/usr/lib/nginx/modules/ngx_http_mikrom_router_module.so", "644"],
    ["debian/mikrom-router-load.conf", "/etc/nginx/modules-available/mikrom-router.conf", "644"],
    ["debian/mikrom-router-site.conf", "/etc/nginx/sites-available/mikrom-router", "644"],
]
conf-files = [
    "/etc/nginx/modules-available/mikrom-router.conf",
    "/etc/nginx/sites-available/mikrom-router"
]
maintainer-scripts = "debian"

[dependencies]
# NGINX Bindings
ngx = { path = "../ngx-rust", features = ["vendored"] }

# Async & Sync
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
once_cell = "1"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] } 
anyhow = "1.0"
async-nats = "0.38"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
tokio-stream = "0.1"
dotenvy = "0.15"

# Workspace Internal
mikrom-proto = { path = "../mikrom-proto" }
aes-gcm = "0.10"
base64 = "0.22"
thiserror = "2"
sha2 = "0.10"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

