[package]
name = "mikrom-router"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-trait = "0.1.89"
chrono = "0.4.44"
dotenvy = "0.15"
futures-util = "0.3.32"
hostname = "0.4.2"
http = "1.4"
envy.workspace = true
mikrom-api = { path = "../mikrom-api", optional = true }
mikrom-proto = { version = "0.3.0", path = "../mikrom-proto" }
mikrom-network = { path = "../mikrom-network" }
mikrom-scheduler = { path = "../mikrom-scheduler", optional = true }
openssl = "0.10.80"
rustls = { version = "0.23", features = ["ring"], optional = true }
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics", "logs"] }
pingora = { version = "0.8.0", features = ["openssl", "lb", "proxy"] }
pingora-limits = "0.8.0"
prost.workspace = true
axum = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dashmap.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
aes-gcm = "0.10"
base64 = "0.22"
futures = "0.3.32"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
neli = { version = "0.7.4", features = ["async"] }
libc = "0.2"
sha2 = "0.10"
thiserror = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[features]
default = []
integration-tests = []
scale-to-zero-e2e = [
    "dep:mikrom-api",
    "dep:mikrom-scheduler",
    "dep:rustls",
    "dep:tower",
    "dep:uuid",
]

[lints]
workspace = true

[dev-dependencies]
axum = "0.8.9"
reqwest = { workspace = true, default-features = false, features = ["rustls"] }
tempfile = "3.27"
