[package]
name = "mikrom-router"
version = "0.4.5"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-trait = "0.1.89"
chrono = "0.4.44"
dotenvy = "0.15"
futures-util = "0.3.32"
hostname = "0.4.2"
http = "1.4"
envy.workspace = true
mikrom-api = { path = "../mikrom-api", optional = true }
mikrom-proto = { version = "0.4.5", path = "../mikrom-proto" }
mikrom-network = { path = "../mikrom-network" }
mikrom-scheduler = { path = "../mikrom-scheduler", optional = true }
openssl = "0.10.80"
rustls = { version = "0.23", features = ["ring"], optional = true }
opentelemetry = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "trace", "metrics", "logs"] }
pingora = { version = "0.8.1", features = ["openssl", "lb", "proxy"] }
pingora-limits = "0.8.1"
prost.workspace = true
axum = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dashmap.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
aes-gcm = "0.11"
base64 = "0.22"
futures = "0.3.32"
rtnetlink = "0.21"
netlink-packet-route = "0.30"
neli = { version = "0.7.4", features = ["async"] }
libc = "0.2"
sha2 = "0.11"
thiserror = "2"
x25519-dalek = { version = "3.0.0", features = ["static_secrets"] }
rand = "0.10"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[package.metadata.deb]
maintainer = "Antonio Pardo <apardo@spluca.org>"
copyright = "2026, Mikrom Team"
license-file = ["../LICENSE", "0"]
extended-description = """\
Mikrom Router provides high-performance ingress routing for the Mikrom platform
using Pingora. It integrates dynamic routing via NATS/PostgreSQL and automatic
TLS management.
"""
section = "admin"
priority = "optional"
depends = "libc6, libssl3, wireguard-tools"
assets = [
    ["target/release/mikrom-router", "/usr/bin/mikrom-router", "755"],
    ["debian/lib/systemd/system/mikrom-router.service", "/lib/systemd/system/mikrom-router.service", "644"],
    ["debian/etc/mikrom/router.env", "/etc/mikrom/router.env", "640"],
]
systemd-units = { unit-name = "mikrom-router" }

[features]
default = []
integration-tests = []
scale-to-zero-e2e = [
    "dep:mikrom-api",
    "dep:mikrom-scheduler",
    "dep:rustls",
    "dep:tower",
    "dep:uuid",
]

[lints]
workspace = true

[dev-dependencies]
axum = "0.8.9"
reqwest = { workspace = true, default-features = false, features = ["rustls"] }
tempfile = "3.27"
