[package]
name = "mikrom-scheduler"
version = "0.1.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow.workspace = true
async-trait = "0.1"
parking_lot = "0.12"
tokio-stream = "0.1"
envy.workspace = true

mikrom-proto = { path = "../mikrom-proto" }
dotenvy = "0.15"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.1"
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"

[build-dependencies]
tonic-build.workspace = true

[features]
default = ["build"]
build = []
