[package]
name = "mikrom-scheduler"
version = "0.1.1"
edition = "2024"


[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow.workspace = true
async-nats.workspace = true
async-trait = "0.1"
envy.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
futures = "0.3"
sha2 = "0.10"

mikrom-proto = { path = "../mikrom-proto" }
dotenvy = "0.15"
hex = "0.4.3"
rand = "0.8"
x25519-dalek = "2.0.1"
rand_core = "0.6"

[features]
default = ["build"]
build = []
test-utils = []
